<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtHomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/txtHomeTitle"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtPromptSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:text="@string/txtPromptSelection"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnViewInventory"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        android:text="@string/txtInventoryBtn" />

    <Button
        android:id="@+id/btnViewPullList"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/txtPullListBtn" />

    <Button
        android:id="@+id/btnUpdateInventory"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="163dp"
        android:text="@string/txtUpdateInventoryBtn" />

    <Button
        android:id="@+id/btnSearchInventory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="97dp"
        android:text="@string/txtSearchInventoryBtn" />

</RelativeLayout>