<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtAddItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:text="@string/txtAddItemTitle"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtItemNamePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/txtItemNamePrompt"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userTxtItemName"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="57dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtItemVolumeSizePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="127dp"
            android:text="@string/txtItemSizePrompt"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userTxtVolume"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/btnCancel"
            android:layout_centerVertical="true"
            android:ems="10"
            android:inputType="number" />

        <RadioGroup
            android:id="@+id/rbGroup"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="43dp">

            <RadioButton
                android:id="@+id/rbOunces"
                android:layout_width="94dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtOunces"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbMilliliters"
                android:layout_width="91dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtMilliliters" />

            <RadioButton
                android:id="@+id/rbLiters"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtLiters" />

            <RadioButton
                android:id="@+id/rbGallons"
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtGallons" />
        </RadioGroup>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="253dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="84dp"
            android:text="@string/txtAddPrompt" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="249dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="25dp"
            android:text="@string/txtCancelPrompt" />
    </RelativeLayout>
</LinearLayout>